# ClassSchedule2ICS

./: .gitignore  genCIS_v1.py  genICS_v2.py  pyproject.toml  timetable.xlsx
