[project]
name = "timetable-to-ics"
version = "0.1.0"
description = "Convert Excel timetable to ICS calendar format"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0.0",
    "icalendar>=5.0.0",
    "pytz>=2023.3",
    "openpyxl>=3.1.0",
    "python-dateutil>=2.8.2"
]

[build-system]
requires = ["setuptools>=61.0", "pip>=23.0"]
build-backend = "setuptools.build_meta"